# receipt-extractor

./: .gitignore  Makefile  Pipfile  README.md  config.ini  docker-compose.yaml  examples.txt  extractor_hortifruti.py  extractor_zonasul.py  hortifruti_extractor_metrics.csv  main.py  main_extractor_metrics.csv  main_extractor_metrics_2023-09-11.csv  mongo-ops.js  pyproject.toml  zonasul_extractor_metrics.csv
hortifruti/: extractor.py
metrics/: main_extractor_metrics.csv  main_extractor_metrics_2023-09-10.csv  main_extractor_metrics_2023-10-17.csv  main_extractor_metrics_2023-10-18.csv  main_extractor_metrics_2023-10-24.csv  main_extractor_metrics_2023-12-10.csv  main_extractor_metrics_2023-12-11.csv  zonasul_extractor_metrics.csv
zonasul/: extractor.py
